--- a/index.html
+++ b/index.html
@@ -78,18 +78,16 @@
 <h1>Interests </h1>
 
 <figure class="icon">
-<img src="img/demo/_small/italy.jpg" >
+<img src="img/demo/_small/italy.jpg" caption="Motorcycle Trip in Italy" >
 
-<caption>
-	<p>Motorcycle Trip in Italy</p> 
-	
-</figure>
-<figure class="icon">
-<img src="img/demo/_small/surfingt&t.jpeg">
-<caption>
-	<p>Surfing in Tobago</p>	
 </figure>	
-	<article>
+
+<figure class="icon">
+<img src="img/demo/_small/surfingt&t.jpeg" caption="Surfing in Tobago">
+
+
+	
+</figure>	
 	<p>I enjoy dancing, surfing and the perfect cup of coffee. I would definitely say I'm a novice surfer but I pull a great epresso. My friends call me Catan queen and I'm a big fan of relaxing while looking into my future with tarot cards.  
 		<br>
 		<br>
@@ -100,7 +98,7 @@
 		<br>
 			For me the perfect weekend involves music, community and some great food. 
 	</p>
-	</article>
+	
 
 <!--Portfolio -->
 </section>
@@ -127,10 +125,11 @@
 
 <section id="Contact">
 
-	<h1>Contact Me </h1>	
+	<h1>Contact Me </h1>
+		
 
 <a href="https://github.com/claudiac-m">
-	<img src="img/demo/socialmedia/github.png">	</a>
+	<img src="img/demo/socialmedia/github.png" alt="GitHub"></a>
 
 <a href="https://ca.linkedin.com/in/claudiacornalimotta">
 	<img src="img/demo/socialmedia/linkedin.png" alt="LinkedIn" ></a>	
